Style Updates as per Spreadsheet

--- a/css/all.css
+++ b/css/all.css
@@ -1,4 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,900);
 @font-face {
   font-family: 'icomoon';
   src: url("../fonts/icomoon.eot?-gsif7l");
@@ -237,6 +236,13 @@
 .icon-skype:before {
   content: "\e648"; }
 
+@font-face {
+  font-family: 'avenir-book';
+  src: url("../fonts/avenir/avenir-book-webfont.eot");
+  src: url("../fonts/avenir/avenir-book-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/avenir/avenir-book-webfont.woff") format("woff"), url("../fonts/avenir/avenir-book-webfont.ttf") format("truetype"), url("../fonts/avenir/avenir-book-webfont.svg#avenir-book") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
 /***  Transitions  ***/
 /***  Radius  ***/
 /***  Box Border  ***/
@@ -265,8 +271,9 @@ Extenders
 
 #intro-section #hero .container h1, .page-header h1, .jumbotron h1 {
   font-weight: 300;
-  letter-spacing: .044em;
-  text-shadow: 2px 4px 7px black; }
+  letter-spacing: 0;
+  word-spacing: 3px;
+  text-shadow: 2px 4px 7px rgba(0, 0, 0, 0.8); }
   @media only screen and (max-width: 1200px) {
     #intro-section #hero .container h1, .page-header h1, .jumbotron h1 {
       font-size: 70px;
@@ -362,7 +369,10 @@ Extenders
           background: #ea5a3a; } }
     #primary-navigation ul li a {
       color: #fff;
-      display: block; }
+      display: block;
+      font-weight: 200; }
+      #primary-navigation ul li a:hover {
+        font-weight: 800; }
       @media only screen and (max-width: 768px) {
         #primary-navigation ul li a:hover {
           color: #fff; } }
@@ -370,7 +380,7 @@ Extenders
       background: #8B8EEA; }
     #primary-navigation ul li.search-toggle {
       padding-top: 15px;
-      color: #fff;
+      color: rgba(255, 255, 255, 0.5);
       padding-left: 10px;
       padding-bottom: 0;
       cursor: pointer; }
@@ -1194,7 +1204,7 @@ body.vjs-full-window {
     font-weight: 900;
     line-height: .6; }
     .content-section .section-number span {
-      padding-right: 15px; }
+      padding-right: 50px; }
   .content-section .section-template .section-right-column {
     display: -webkit-box;
     display: -moz-box;
@@ -2579,7 +2589,8 @@ body.vjs-full-window {
 #blog {
   -webkit-box-shadow: 0 0;
   -moz-box-shadow: 0 0;
-  box-shadow: 0 0; }
+  box-shadow: 0 0;
+  padding-bottom: 0; }
 
 .author {
   padding-left: 0; }
@@ -2590,31 +2601,11 @@ body.vjs-full-window {
   #blog-post-index #blog-loading {
     position: absolute;
     left: 50%;
-    margin-left: -100px;
+    margin-left: -95px;
     bottom: 150px;
-    background: url(../images/auburn-loader.png) no-repeat 0 0;
-    width: 200px;
-    height: 67px;
-    -webkit-animation-delay: 1s;
-    -webkit-animation-duration: 2s;
-    -webkit-animation-name: rotate;
-    -webkit-animation-iteration-count: infinite;
-    -webkit-animation-timing-function: linear;
-    -moz-animation-delay: 1s;
-    -moz-animation-duration: 2s;
-    -moz-animation-name: rotate;
-    -moz-animation-iteration-count: infinite;
-    -moz-animation-timing-function: linear;
-    -o-animation-delay: 1s;
-    -o-animation-duration: 2s;
-    -o-animation-name: rotate;
-    -o-animation-iteration-count: infinite;
-    -o-animation-timing-function: linear;
-    animation-delay: 1s;
-    animation-duration: 2s;
-    animation-name: rotate;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear; }
+    background: url(../images/blog-loading.gif) no-repeat 0 0;
+    width: 190px;
+    height: 52px; }
   #blog-post-index #no-content-message {
     border: 1px solid #eaeaea;
     padding: 50px;
@@ -2633,7 +2624,7 @@ body.vjs-full-window {
       overflow: hidden;
       position: relative;
       margin-bottom: 15px;
-      border: 1px solid #eaeaea;
+      border: 1px solid rgba(0, 0, 0, 0.2);
       display: -webkit-box;
       display: -moz-box;
       display: -ms-flexbox;
@@ -2655,21 +2646,31 @@ body.vjs-full-window {
         -ms-transform: scale(1.25);
         -o-transform: scale(1.25);
         transform: scale(1.25); }
-      .blog-post article > figure img {
-        margin: 0 auto;
-        -o-transition: all 0.5s;
-        -ms-transition: all 0.5s;
-        -moz-transition: all 0.5s;
-        -webkit-transition: all 0.5s;
-        transition: all 0.5s; }
-      .blog-post article > figure figcaption {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background: rgba(0, 0, 0, 0.5);
-        color: #fff;
-        padding: 10px; }
+      .blog-post article > figure a {
+        display: block;
+        width: 100%;
+        height: 100%;
+        text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3); }
+        .blog-post article > figure a img {
+          margin: 0 auto;
+          -o-transition: all 0.4s;
+          -ms-transition: all 0.4s;
+          -moz-transition: all 0.4s;
+          -webkit-transition: all 0.4s;
+          transition: all 0.4s;
+          min-width: 100%;
+          min-height: 100%; }
+        .blog-post article > figure a figcaption {
+          position: absolute;
+          bottom: 0;
+          top: 0;
+          left: 0;
+          right: 0;
+          background: rgba(0, 0, 0, 0.3);
+          color: #fff;
+          padding: 10px; }
+    .blog-post article p {
+      padding: 0 10px; }
     .blog-post article .single-inspiration {
       width: 50px;
       height: 50px;
@@ -2686,6 +2687,11 @@ body.vjs-full-window {
   padding-bottom: 50px; }
   #blog-block .blog-post-full {
     margin-bottom: 40px; }
+    #blog-block .blog-post-full p a {
+      text-decoration: none;
+      color: #ea5a3a; }
+      #blog-block .blog-post-full p a:hover {
+        text-decoration: underline; }
   #blog-block .author-info figure {
     margin: 0;
     float: left; }
@@ -2699,7 +2705,7 @@ body.vjs-full-window {
 
 .author-info {
   margin-bottom: 10px; }
-  .author-info h5, .author-info h4 {
+  .author-info h5 {
     color: #44aeea;
     padding: 0;
     margin: 0 0 0 10px;
@@ -2713,13 +2719,13 @@ body.vjs-full-window {
     padding: 10px 0 10px 10px; }
 
 .single-post-header {
-  padding: 75px 0 40px; }
+  padding: 75px 0 0; }
   @media only screen and (max-width: 768px) {
     .single-post-header {
       padding-bottom: 20px; } }
   .single-post-header h1 {
     color: #44aeea;
-    font-weight: 900; }
+    font-weight: 400; }
 
 .author-name {
   margin-top: 10px; }
@@ -2740,12 +2746,17 @@ body.vjs-full-window {
     #right-sidebar .sidebar-widget ul {
       list-style: none;
       padding: 0; }
+      #right-sidebar .sidebar-widget ul li {
+        padding: 10px;
+        border-bottom: 1px solid #eaeaea; }
+        #right-sidebar .sidebar-widget ul li:last-child {
+          border-bottom: 0; }
 
 #social-navigation {
   position: relative; }
   #social-navigation .social-link-column {
     position: fixed;
-    top: 90px;
+    top: 86px;
     width: 5%;
     z-index: 9; }
 
@@ -2760,13 +2771,10 @@ body.vjs-full-window {
     height: 150px;
     display: block; }
     #curator-info-block figure img {
-      border: 3px solid #eaeaea;
+      border: 1px solid #eaeaea;
       -webkit-border-radius: 50%;
       -moz-border-radius: 50%;
-      border-radius: 50%;
-      -webkit-box-shadow: -1px 0px 5px 0px rgba(0, 0, 0, 0.75);
-      -moz-box-shadow: -1px 0px 5px 0px rgba(0, 0, 0, 0.75);
-      box-shadow: -1px 0px 5px 0px rgba(0, 0, 0, 0.75); }
+      border-radius: 50%; }
   #curator-info-block h1, #curator-info-block p {
     color: #333; }
 
@@ -2796,6 +2804,17 @@ body.vjs-full-window {
 
 .featured-image-content img {
   margin: 0 auto; }
+
+#load-posts {
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+  font-size: 28px;
+  font-size: 1.75rem; }
+  #load-posts:hover {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.75) !important; }
+
+.single-post-page-wrapper p {
+  padding: 8px 0; }
 
 #team-graphic li {
   max-width: 16.66%;
@@ -3278,7 +3297,8 @@ body.vjs-full-window {
     top: 50%;
     font-size: 50px;
     font-size: 3.125rem;
-    margin-top: -20px; }
+    margin-top: -20px;
+    color: #44aeea; }
   .carousel-control.left {
     background: none;
     display: none; }
@@ -3488,15 +3508,15 @@ a img.aligncenter {
 /* gs bootstrap */
 body {
   font-size: 16px;
-  font-family: "Lato", sans-serif;
+  font-family: "avenir-book", sans-serif;
   word-spacing: .047em; }
 
 a, button {
-  -o-transition: all 0.4s;
-  -ms-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-  -webkit-transition: all 0.4s;
-  transition: all 0.4s;
+  -o-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
   color: inherit; }
   a:hover, button:hover {
     text-decoration: none;
@@ -3537,31 +3557,42 @@ strong {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
-  font-size: 22px;
-  font-size: 1.375rem;
+  font-size: 28px;
+  font-size: 1.75rem;
   text-transform: uppercase;
-  font-weight: 900;
+  font-weight: 400;
   margin-top: 0;
-  line-height: 1.6;
-  padding: 7px 12px; }
+  line-height: 1.2;
+  padding: 7px 12px;
+  -webkit-box-shadow: 1px 2px 8px -1px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 1px 2px 8px -1px rgba(0, 0, 0, 0.4);
+  box-shadow: 1px 2px 8px -1px rgba(0, 0, 0, 0.4);
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5); }
+  .gs-btn a {
+    color: white; }
+    .gs-btn a:hover {
+      color: rgba(255, 255, 255, 0.7) !important; }
+  .gs-btn:hover {
+    color: rgba(255, 255, 255, 0.7) !important; }
 
 .gs-btn-blue {
   background: #44aeea;
-  color: #fff; }
-  .gs-btn-blue:hover, .gs-btn-blue a:hover {
-    color: #333333 !important; }
+  color: #fff;
+  font-size: 36px;
+  font-size: 2.25rem;
+  font-weight: 700; }
+  .gs-btn-blue a {
+    text-decoration: none; }
+    .gs-btn-blue a:hover {
+      text-decoration: none; }
 
 .gs-btn-orange {
   background: #ea5a3a;
   color: #fff; }
-  .gs-btn-orange:hover, .gs-btn-orange a:hover {
-    color: #333333 !important; }
 
 .gs-btn-white {
   background: #fff;
   color: #333; }
-  .gs-btn-white:hover {
-    color: #333333 !important; }
 
 button:active {
   border: 0; }
@@ -3767,7 +3798,6 @@ form {
       -webkit-border-radius: 0;
       -moz-border-radius: 0;
       border-radius: 0;
-      text-transform: uppercase;
       border: 0;
       box-shadow: none; }
     form .form-group button {
