--- a/css/blog.scss
+++ b/css/blog.scss
@@ -9,6 +9,7 @@
 
 #blog {
   @include box-shadow(0,0);
+  padding-bottom: 0;
 }
 .author {
   padding-left: 0;
@@ -20,12 +21,12 @@
   #blog-loading {
     position: absolute;
     left: 50%;
-    margin-left: -100px;
+    margin-left: -95px;
     bottom: 150px;
-    background: url(../images/auburn-loader.png) no-repeat 0 0;
-    width: 200px;
-    height: 67px;
-    @include funkyAnimation(1s,2s,rotate)
+    background: url(../images/blog-loading.gif) no-repeat 0 0;
+    width: 190px;
+    height: 52px;
+    //@include funkyAnimation(1s,2s,rotate)
   }
   #no-content-message {
     border: 1px solid #eaeaea;
@@ -47,26 +48,38 @@
           overflow: hidden;
           position: relative;
           margin-bottom: 15px;
-          border: 1px solid #eaeaea;
+          border: 1px solid rgba(0,0,0,0.2);
           @include flexbox;
           @include flexAlignItems(center);
           @include justifyContent(center);
             &:hover img {
               @include scale(1.25);
             }
-            img {
-              margin: 0 auto;
-              @include transition(all 0.5s);
+            a {
+              display: block;
+              width: 100%;
+              height: 100%;
+              text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+              img {
+                margin: 0 auto;
+                @include transition(all 0.4s);
+                min-width: 100%;
+                min-height: 100%;
+              }
+              figcaption {
+                position: absolute;
+                bottom: 0;
+                top: 0;
+                left: 0;
+                right: 0;
+                background: rgba(0, 0, 0, 0.3);
+                color: #fff;
+                padding: 10px;
+              }
             }
-            figcaption {
-              position: absolute;
-              bottom: 0;
-              left: 0;
-              right: 0;
-              background: rgba(0,0,0,0.5);
-              color: #fff;
-              padding: 10px;
-            }
+        }
+        p {
+          padding: 0 10px;
         }
         .single-inspiration {
           width: 50px;
@@ -89,6 +102,15 @@
   padding-bottom: 50px;
     .blog-post-full {
       margin-bottom: 40px;
+        p {
+          a {
+            text-decoration: none;
+            color: $gsOrange;
+              &:hover {
+                text-decoration: underline;
+              }
+          }
+        }
     }
     .author-info {
       figure {
@@ -111,7 +133,7 @@
 
 .author-info {
   margin-bottom: 10px;
-    h5, h4 {
+    h5 {
       color: $gsBlue;
       padding: 0;
       margin: 0 0 0 10px;
@@ -130,13 +152,13 @@
 
 //STRUCTURE
 .single-post-header {
-  padding: 75px 0 40px;
+  padding: 75px 0 0;
     @include tablets {
       padding-bottom: 20px;
     }
     h1 {
       color: $gsBlue;
-      font-weight: 900;
+      font-weight: 400;
     }
 }
 .author-name {
@@ -161,6 +183,13 @@
         ul {
           list-style: none;
           padding: 0;
+            li {
+              padding: 10px;
+              border-bottom: 1px solid #eaeaea;
+                &:last-child {
+                  border-bottom: 0;
+                }
+            }
         }
     }
 }
@@ -169,7 +198,7 @@
     position: relative;
       .social-link-column {
         position: fixed;
-        top: 90px;
+        top: 86px;
         width: 5%;
         z-index: 9;
       }
@@ -186,9 +215,8 @@
       height: 150px;
       display: block;
         img {
-          border: 3px solid #eaeaea;
+          border: 1px solid #eaeaea;
           @include border-radius(50%);
-          @include box-shadow(-1px 0px 5px 0px, rgba(0,0,0,0.75));
         }
     }
     h1, p {
@@ -231,4 +259,17 @@
   img {
     margin: 0 auto;
   }
+}
+#load-posts {
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
+  @include font-size(28px);
+    &:hover {
+      text-decoration: none;
+      color: rgba(255,255,255,0.75)!important;
+    }
+}
+.single-post-page-wrapper {
+    p {
+      padding: 8px 0;
+    }
 }
