--- a/css/variable.scss
+++ b/css/variable.scss
@@ -5,5 +5,16 @@ $defaultHoverColor : $gsOrange;
 
 
 // FONTS
-$alphaCustomFont : 'Lato', sans-serif;
+@font-face {
+  font-family: 'avenir-book';
+  src: url('../fonts/avenir/avenir-book-webfont.eot');
+  src: url('../fonts/avenir/avenir-book-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/avenir/avenir-book-webfont.woff') format('woff'),
+  url('../fonts/avenir/avenir-book-webfont.ttf') format('truetype'),
+  url('../fonts/avenir/avenir-book-webfont.svg#avenir-book') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+$alphaCustomFont : 'avenir-book', sans-serif;
 $numberCustomFont : 'Titillium Web', sans-serif;
+//$alphaCustomFont : 'Lato', sans-serif;
