--- a/css/sections.scss
+++ b/css/sections.scss
@@ -34,9 +34,9 @@
     }
     .top-corner-btn {
       position: absolute;
-      top: 0;
+      top: -5px;
       right: 15px;
-      margin-top: 15px;
+      margin-top: 0;
     }
 }
 
@@ -204,7 +204,7 @@
   a {
     text-decoration: none;
   }
-  #social-contact {
+  #social-contacts {
     li {
       display: inline-block;
       font-size: 25px;
@@ -222,4 +222,7 @@
 
 .in-section-social {
   padding: 0!important;
+}
+.single-column-section {
+  position: relative;
 }
