--- a/css/sections.scss
+++ b/css/sections.scss
@@ -205,6 +205,7 @@
     text-decoration: none;
   }
   #social-contacts {
+    margin-top: 30px;
     li {
       display: inline-block;
       font-size: 25px;
