--- a/css/all.css
+++ b/css/all.css
@@ -2763,7 +2763,7 @@ body.vjs-full-window {
       list-style: none;
       padding: 0; }
       #right-sidebar .sidebar-widget ul li {
-        padding: 10px;
+        padding: 10px 0;
         border-bottom: 1px solid #eaeaea; }
         #right-sidebar .sidebar-widget ul li:last-child {
           border-bottom: 0; }
