--- a/css/blog.scss
+++ b/css/blog.scss
@@ -184,7 +184,7 @@
           list-style: none;
           padding: 0;
             li {
-              padding: 10px;
+              padding: 10px 0;
               border-bottom: 1px solid #eaeaea;
                 &:last-child {
                   border-bottom: 0;
