--- a/css/blog.scss
+++ b/css/blog.scss
@@ -179,6 +179,7 @@
         .widget-title {
           color: $gsBlue;
           font-weight: 300;
+          margin-top: 5px;
         }
         ul {
           list-style: none;
