--- a/css/variable.scss
+++ b/css/variable.scss
@@ -1,7 +1,6 @@
 // COLORS
 $gsBlue : #44aeea; //68,174,234
 $gsOrange : #ea5a3a; //234,90,58
-$defaultHoverColor : $gsOrange;
 
 
 // FONTS
@@ -15,6 +14,17 @@ $defaultHoverColor : $gsOrange;
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'avenir-heavy';
+  src: url('../fonts/avenir/avenir-heavy-webfont.eot');
+  src: url('../fonts/avenir/avenir-heavy-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/avenir/avenir-heavy-webfont.woff') format('woff'),
+  url('../fonts/avenir/avenir-heavy-webfont.ttf') format('truetype'),
+  url('../fonts/avenir/avenir-heavy-webfont.svg#avenir-heavy') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 $alphaCustomFont : 'avenir-book', sans-serif;
+//$alphaCustomFontBold : 'avenir-heavy', sans-serif;
 $numberCustomFont : 'Titillium Web', sans-serif;
 //$alphaCustomFont : 'Lato', sans-serif;
