--- a/css/all.css
+++ b/css/all.css
@@ -1189,6 +1189,12 @@ body.vjs-full-window {
     #intro-section #get-started a {
       color: #fff; }
 
+#info-modal .close {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  display: block; }
+
 #sub-intro-section {
   background: #44aeea;
   padding-bottom: 35px;
