--- a/css/petitions.scss
+++ b/css/petitions.scss
@@ -108,7 +108,7 @@
   .status-bar {
     background-color: $gsOrange;
     color: #fff;
-    padding: 0 5px;
+    padding: 5px;
       p {
         margin: 0;
         text-align: left;
