--- a/css/all.css
+++ b/css/all.css
@@ -1508,7 +1508,7 @@ body.vjs-full-window {
   .progress .status-bar {
     background-color: #ea5a3a;
     color: #fff;
-    padding: 0 5px; }
+    padding: 5px; }
     .progress .status-bar p {
       margin: 0;
       text-align: left;
@@ -2697,8 +2697,11 @@ body.vjs-full-window {
           background: rgba(0, 0, 0, 0.3);
           color: #fff;
           padding: 10px; }
-    .blog-post article p {
-      padding: 0 10px; }
+          .blog-post article > figure a figcaption h3 {
+            position: absolute;
+            bottom: 0;
+            font-weight: 900;
+            text-shadow: 1px 1px 1px #333; }
     .blog-post article .single-inspiration {
       width: 50px;
       height: 50px;
@@ -3574,7 +3577,8 @@ p a {
 
 p {
   font-size: 30px;
-  font-size: 1.875rem; }
+  font-size: 1.875rem;
+  line-height: 1.4; }
 
 a:active, a:visited {
   color: inherit;
