Links within headers

--- a/css/all.scss
+++ b/css/all.scss
@@ -37,7 +37,7 @@ a, button {
       border: 0;
       outline: none;
     }
-p a {
+p a, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   color: $gsOrange;
   text-decoration: none;
   &:hover {
