--- a/css/all.css
+++ b/css/all.css
@@ -3571,15 +3571,15 @@ a, button {
   a:hover, button:hover {
     text-decoration: none;
     outline: none; }
-  a:focus, a:active, button:focus, button:active {
+  a:focus, a:active, a:visited, button:focus, button:active, button:visited {
     color: inherit;
     border: 0;
     outline: none; }
 
-p a {
+p a, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   color: #ea5a3a;
   text-decoration: none; }
-  p a:hover {
+  p a:hover, h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
     color: inherit !important;
     text-decoration: underline; }
 
