--- a/css/landing-page.scss
+++ b/css/landing-page.scss
@@ -149,4 +149,11 @@
       margin-bottom: 15px;
     }
 }
+.page-id-159 {
+  .petition-meta-info {
+    a {
+      color: $gsOrange;
+    }
+  }
+}
 
