--- a/css/all.css
+++ b/css/all.css
@@ -1341,6 +1341,10 @@ body.vjs-full-window {
       font-family: "Titillium Web", sans-serif;
       color: rgba(68, 174, 234, 0.2);
       line-height: 0.5; }
+      @media only screen and (max-width: 768px) {
+        #numbered-bg ul li span {
+          font-size: 140px;
+          font-size: 8.75rem; } }
 
 .faq li {
   position: relative;
@@ -3046,6 +3050,9 @@ body.vjs-full-window {
 #contact .form-group {
   margin-bottom: 15px; }
 
+.page-id-159 .petition-meta-info a {
+  color: #ea5a3a; }
+
 .modal h4 {
   font-weight: 300;
   text-transform: uppercase; }
@@ -3576,10 +3583,10 @@ a, button {
     border: 0;
     outline: none; }
 
-p a, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+p a, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a, small a {
   color: #ea5a3a;
   text-decoration: none; }
-  p a:hover, h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
+  p a:hover, h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover, small a:hover {
     color: inherit !important;
     text-decoration: underline; }
 
@@ -3885,7 +3892,8 @@ form {
   right: 0;
   bottom: -1000px;
   color: #fff;
-  z-index: 9; }
+  z-index: 9;
+  max-height: 400px; }
   #slideDisplayWindow > div {
     -webkit-border-radius: 5px 5px 0 0;
     -moz-border-radius: 5px 5px 0 0;
