--- a/css/all.css
+++ b/css/all.css
@@ -3051,7 +3051,7 @@ body.vjs-full-window {
   margin-bottom: 15px; }
 
 .page-id-159 .petition-meta-info a {
-  color: #ea5a3a; }
+  color: #ea5a3a !important; }
 
 .modal h4 {
   font-weight: 300;
@@ -3841,7 +3841,8 @@ button:active {
     top: 100%;
     -webkit-box-shadow: 0px 1px 4px 4px rgba(68, 174, 234, 0.1);
     -moz-box-shadow: 0px 1px 4px 4px rgba(68, 174, 234, 0.1);
-    box-shadow: 0px 1px 4px 4px rgba(68, 174, 234, 0.1); }
+    box-shadow: 0px 1px 4px 4px rgba(68, 174, 234, 0.1);
+    z-index: 9; }
     .select-menu .select-options ul {
       list-style: none;
       padding-left: 0;
