--- a/css/all.scss
+++ b/css/all.scss
@@ -297,6 +297,7 @@ button:active {
     right: 15px;
     top: 100%;
     @include box-shadow(0px 1px 4px 4px, rgba(68,174,234,0.1));
+    z-index: 9;
       ul {
         list-style: none;
         padding-left: 0;
