--- a/css/all.scss
+++ b/css/all.scss
@@ -372,6 +372,7 @@ form {
       top: 15px;
       cursor: pointer;
       display: block;
+      z-index: 9999;
     }
     header {
       padding: 10px;
